Bug 468856 - KRunner remembers searches done through the application launcher
Summary: KRunner remembers searches done through the application launcher
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.27.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-23 11:52 UTC by Riccardo Robecchi
Modified: 2023-06-03 09:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Riccardo Robecchi 2023-04-23 11:52:02 UTC
SUMMARY
KRunner keeps searches done through the application launcher in its history, which means it offers a lot of completely useless searches (e.g. when you just search for initials of programs, such as "st" for Steam or "kal" for Kalendar). The two should be separated and KRunner should ideally not remember these searches. The ideal would be to have a setting in case people actually want KRunner to remember these searches, but as this behaviour wasn't present in the past I would treat it as a bug that has to be fixed.

STEPS TO REPRODUCE
1. Search for something in the application launcher
2. Open KRunner

OBSERVED RESULT
KRunner offers the keyword used in the application launcher search in its history.

EXPECTED RESULT
KRunner's history is separated from the application launcher's.

SOFTWARE/OS VERSIONS
Linux: KDE neon
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Alexander Lohnau 2023-05-11 12:21:04 UTC
I am working on this
Comment 3 Bug Janitor Service 2023-06-02 05:38:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2969
Comment 4 Alexander Lohnau 2023-06-02 05:54:35 UTC
Git commit 0e1b7e93f1bea769b865259b87adc75c726e0488 by Alexander Lohnau.
Committed on 02/06/2023 at 05:19.
Pushed by alex into branch 'master'.

Allow use of different state config group

This way, one can support different autocompletion groups when using the
KRunner model. For example, if the Kicker and KRunner history should be
handled separately.

M  +17   -0    autotests/runnermanagertest.cpp
M  +9    -3    src/model/resultsmodel.cpp
M  +1    -0    src/model/resultsmodel.h
M  +2    -2    src/model/runnerresultsmodel.cpp
M  +2    -1    src/model/runnerresultsmodel_p.h
M  +11   -4    src/runnermanager.cpp
M  +1    -0    src/runnermanager.h

https://invent.kde.org/frameworks/krunner/-/commit/0e1b7e93f1bea769b865259b87adc75c726e0488
Comment 5 Alexander Lohnau 2023-06-02 14:50:11 UTC
Git commit b35da284e93a6c577ffaad71333eb50d59717865 by Alexander Lohnau.
Committed on 02/06/2023 at 05:37.
Pushed by alex into branch 'master'.

applets/kicker: Save KRunner history in different state config

FIXED-IN: 6.0

M  +5    -1    applets/kicker/plugin/runnermatchesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b35da284e93a6c577ffaad71333eb50d59717865
Comment 6 Riccardo Robecchi 2023-06-03 09:37:18 UTC
Thank you for fixing this, Alexander! I admit I would have liked to see the fix before Plasma 6.0, but if anything it makes the next version of Plasma even better. Thanks!