applets/kicker: Save KRunner history in different state config

BUG: 468856

FIXED-IN: 6.0